--- a/9-Forkify/package.json
+++ b/9-Forkify/package.json
@@ -20,6 +20,8 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "fractional": "^1.0.0"
   }
 }
